@@ -5,10 +5,12 @@ import collections.mainTask.products.flowers.Flower;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 
 public class Bouquet {
+
     List<Product> bouquet;
 
     public Bouquet(List<Product> bouquet) {
@@ -16,15 +18,6 @@ public class Bouquet {
     }
 
     public Bouquet() {
-    }
-
-    public List<Product> getBouquet() {
-        return bouquet;
-    }
-
-
-    public void setBouquet(List<Product> bouquet) {
-        this.bouquet = bouquet;
     }
 
     public void getPriceBouquet() {
@@ -44,20 +37,52 @@ public class Bouquet {
         }
         sortedFlowersByFresh.sort((flowerOne, flowerTwo) -> (int) flowerOne.findFresh() - (int) flowerTwo.findFresh());
         for (Flower flower : sortedFlowersByFresh) {
-            System.out.println(flower.findFresh() + " часов с момента поставки: " + flower);
+            System.out.println(flower.findFresh() + " часов с момента поставки: " + flower.getName() + " (" + flower.getDateManufacture() + ")");
 
         }
     }
 
+
     public void findFlowerByStemLength(int bottomLengthRang, int topLengthRange) {
 
-        List<Product> flowersSortedByStemLength =  bouquet.stream().filter(product -> product instanceof Flower)
+        List<Product> flowersSortedByStemLength = bouquet.stream().filter(product -> product instanceof Flower)
                 .filter(product -> ((Flower) product).getStemLength() >= bottomLengthRang
-                        && ((Flower) product).getStemLength() <= topLengthRange).toList();
+                        && ((Flower) product).getStemLength() <= topLengthRange).collect(Collectors.toList());
 
-        if(flowersSortedByStemLength.size() == 0) {
-            System.out.println("Цветов с такой длинной стебле нет в каталоге");
+        if (flowersSortedByStemLength.size() == 0) {
+            System.out.println("Цветов с такой длинной стебля нет в каталоге. \nЧтобы найти цветы с другим размером стебля снова нажмите 3");
+        } else {
+            for (Product flower : flowersSortedByStemLength) {
+                System.out.println(flower.getName() + " - " + ((Flower) flower).getStemLength() + " см");
+            }
         }
-        System.out.println(flowersSortedByStemLength.get(0));
+    }
+
+    public List<Product> getBouquet() {
+        return bouquet;
+    }
+
+
+    public void setBouquet(List<Product> bouquet) {
+        this.bouquet = bouquet;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof Bouquet bouquet1)) return false;
+        return Objects.equals(getBouquet(), bouquet1.getBouquet());
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(getBouquet());
+    }
+
+    @Override
+    public String toString() {
+        return "Bouquet{" +
+                "bouquet=" + bouquet +
+                '}';
     }
 }
